--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     working_dir: /var/www/html/backend
     volumes:
       - ./backend:/var/www/html/backend
+      - backend_vendor:/var/www/html/backend/vendor
     depends_on:
       - mysql
     ports:
@@ -45,6 +46,7 @@ services:
     working_dir: /app
     volumes:
       - ./frontend:/app
+      - frontend_node_modules:/app/node_modules
     depends_on:
       - backend
     ports:
@@ -54,6 +56,8 @@ services:
 
 volumes:
   mysql_data:
+  backend_vendor:
+  frontend_node_modules:
 
 networks:
   inventory-network:
