--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@fontsource-variable/montserrat": "^5.0.19",
@@ -48,7 +50,9 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-unused-imports": "^4.1.3",
     "eslint-plugin-vue": "^9.33.0",
+    "jsdom": "^26.1.0",
     "prettier": "3.4.2",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "~1.74.1",
     "unplugin-auto-import": "^19.0.0",
     "unplugin-fonts": "^1.1.1",
@@ -57,7 +61,7 @@
     "vite": "^6.0.9",
     "vite-plugin-vue-devtools": "^7.7.1",
     "vite-plugin-vuetify": "^2.0.4",
-    "vitest": "^3.0.5",
+    "vitest": "^3.1.3",
     "vue-eslint-parser": "^10.1.3",
     "vue-router": "^4.4.3"
   },
