--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,12 +21,21 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Local
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=inventory_db
 DB_USERNAME=root
 DB_PASSWORD=
+
+# Docker
+# DB_CONNECTION=mysql
+# DB_HOST=mysql
+# DB_PORT=3306
+# DB_DATABASE=inventory_db
+# DB_USERNAME=admin
+# DB_PASSWORD=admin123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
